src/test/ui/async-await/multiple-lifetimes/ret-impl-trait-no-fg.stderr
warning: lifetime parameter `'b` never used
  --> $DIR/ret-impl-trait-no-fg.rs:6:17
   |
LL | trait Trait<'a, 'b> { }
   |               --^^
   |               |
   |               help: elide the unused lifetime
   |
   = note: `#[warn(unused_lifetimes)]` on by default

warning: lifetime parameter `'a` never used
  --> $DIR/ret-impl-trait-no-fg.rs:6:13
   |
LL | trait Trait<'a, 'b> { }
   |             ^^--
   |             |
   |             help: elide the unused lifetime

error: ambiguous lifetime bound in `impl Trait`
  --> $DIR/ret-impl-trait-no-fg.rs:9:64
   |
LL | async fn async_ret_impl_trait<'a, 'b>(a: &'a u8, b: &'b u8) -> impl Trait<'a, 'b> {
   |                                                                ^^^^^^^^^^^^^^^^^^ neither `'a` nor `'b` outlives the other
   |
   = help: add #![feature(member_constraints)] to the crate attributes to enable

error: aborting due to previous error

